# rimtoolbox

./: .env.dist  .gitignore  README.md  Taskfile.yml  extract.py  pyproject.toml
auxiliary/: trans.py  unravel.py
docs/: category-keys.yml  category-thingCategories.yml  category-thingClass.yml  note.md
rimtoolbox/: log.py  parser.py
toolbox/: parser.py
toolbox/schemas/: base.py
